--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
     ext.cardview_version = "1.0.0"
     ext.recyclerview_version = "1.2.1"
-    ext.material_version = "1.2.1"
+    ext.material_version = "1.4.0"
     ext.glide_version = "4.12.0"
 
     ext.room_version = "2.3.0"
@@ -25,6 +25,7 @@ buildscript {
 
 //    ext.koin_version = "2.1.6"
     ext.koin_version = "3.1.2"
+    ext.nav_version = "2.3.5"
 
     repositories {
         google()
@@ -33,6 +34,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
