--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_gamestar_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_gamestar_launcher_round"
