--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,13 +51,9 @@ android {
 
 dependencies {
     implementation project(":core")
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.android.play:core:1.10.0"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$navigation_version"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leak_canary_version"
 
 }
