--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.21"
-    ext.appcompat_version = "1.3.0"
+    ext.appcompat_version = "1.3.1"
     ext.core_ktx_version = "1.6.0"
     ext.constraint_version = "2.0.4"
     ext.legacy_support_version = "1.0.0"
@@ -27,6 +27,12 @@ buildscript {
     ext.nav_version = "2.3.5"
 
     ext.navigation_version = "2.3.5"
+
+    ext.leak_canary_version= "2.4"
+
+    ext.sqlchipper_version = "4.4.0"
+
+    ext.sqllite_ktx_version = "2.1.0"
 
     repositories {
         google()
