--- a/core/build.gradle
+++ b/core/build.gradle
@@ -68,6 +68,6 @@ dependencies {
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     //encryption sql
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation "androidx.sqlite:sqlite-ktx:2.1.0"
+    implementation "net.zetetic:android-database-sqlcipher:$sqlchipper_version"
+    implementation "androidx.sqlite:sqlite-ktx:$sqllite_ktx_version"
 }
